# doc-intelligence-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
docs/: api.md
scripts/: init-db.sql
src/ai_document_platform/: __init__.py  __main__.py
src/ai_document_platform/api/: main.py
tests/unit/: test_main.py
